--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
     <header>
       <div class="header section">
         <img class="header__logo" src="./images/__logo.svg" alt="логотип" />
-        <div class="header__languages">
-          <a class="header__lang-link header__lang-link_active" href="#" target="_blank">Ru</a>
-          <a class="header__lang-link" href="#" target="_blank">En</a>
-        </div>
+        <ul class="header__languages">
+
+          <li class="header__language header__language_active">
+            <a class="header__lang-link" href="#" target="_blank">Ru</a>
+          </li>
+
+          <li class="header__language">
+            <a class="header__lang-link" href="#" target="_blank">En</a>
+          </li>
+
+        </ul>
       </div>
       </header>
     <main class="content">
